# pixrep

./: .gitignore  LICENSE  README.md  pixcode.py  pixcode竞品调研报告.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pixcode/: __init__.py  analysis.py  cli.py  file_utils.py  flowables.py  fonts.py  models.py  onepdf.py  onepdf_pack.py  pdf_generator.py  scanner.py  syntax.py  theme.py  utils.py
pixrep/: analysis.py  cli.py  constants.py  file_utils.py  flowables.py  fonts.py  js_parser.py  lint_collector.py  models.py  onepdf.py  onepdf_pack.py  onepdf_writer.py  pdf_generator.py  pdf_story_builders.py  query.py  query_renderer.py  query_tui.py  scanner.py  semantic_analyzer.py  theme.py  utils.py
tests/: __init__.py  test_analysis_optimizations.py  test_file_utils.py  test_flowables_js_mask.py  test_onepdf_writer.py  test_query_mode.py  test_scanner_onepdf.py
