[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixrep"
dynamic = ["version"]
description = "Convert code repositories into structured PDF collections for LLM collaboration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["reportlab>=3.6"]

[project.scripts]
pixrep = "pixrep.cli:main"

[tool.setuptools]
packages = ["pixrep"]

[tool.setuptools.dynamic]
version = {attr = "pixrep.version.__version__"}
